@@ -14,6 +14,7 @@ RPC       - New command "setwitnessrewardaddress"
 RPC       - New command "restoreaccount"
 RPC       - Improve behaviour of "deleteaccount" to permanently remove/purge accounts from the wallet if they are readonly accounts; as opposed to the regular behaviour of just hiding accounts that applies to other account types
 RPC       - Fix return value of "enablenetwork" command
+RPC       - Add "selected_shavite_implementation", "selected_echo_implementation" and "selected_argon_implementation" to "getmininginfo" output
 UI        - Show "elapsed" time to current date for witness accounts
 ZMQ       - Add a new ZMQ channel "zmqpubwallettx"
 
